--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,4 +1,4 @@
-<ion-header [translucent]="true" id="main-content">
+<ion-header [translucent]="true" >
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
@@ -11,7 +11,7 @@
   <ion-header>
     <ion-toolbar>
       <ion-buttons slot="start">
-        <ion-menu-button></ion-menu-button>
+        <ion-menu-button><ion-icon name="arrow-back-outline"></ion-icon></ion-menu-button>
       </ion-buttons>
       <ion-title>Menu Content</ion-title>
     </ion-toolbar>
@@ -22,22 +22,13 @@
 </ion-menu>
 
 
-
-
-<!--<ion-header [translucent]="true">-->
-<!--  <ion-toolbar>-->
-<!--    <ion-title>-->
-<!--      {{ tabCurrent }}-->
-<!--    </ion-title>-->
-<!--  </ion-toolbar>-->
-<!--</ion-header>-->
-
+<ion-content id="main-content">
 <ion-tabs (ionTabsWillChange)="onTabChanged($event)">
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1" href="/tabs/tab1">
-      <ion-icon aria-hidden="true" name="triangle"></ion-icon>
-      <ion-label>Tab 1</ion-label>
+      <ion-icon aria-hidden="true" name="qr-code-outline"></ion-icon>
+      <ion-label>scanner</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2" href="/tabs/tab2">
@@ -62,3 +53,4 @@
   </ion-tab-bar>
 
 </ion-tabs>
+</ion-content>
