--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,6 +1,6 @@
 <ion-content [fullscreen]="true">
 
-  <ion-fab slot="fixed" vertical="bottom" horizontal="end" si>
+  <ion-fab slot="fixed" vertical="bottom" horizontal="end" >
     <ion-fab-button (click)="scanner()">
       <ion-icon name="scan-outline"></ion-icon>
     </ion-fab-button>
